src/objects/INT_Movimiento_CIA__c.object
<CustomObject>
    <description>Representa el conjunto de eventos susceptibles de ser informados a las diferentes aseguradoras.
En función de la parametrización, Salesforce guardará una imagen del siniestro en el momento en el cuál se disparó el evento.</description>
    <fields>
        <fullName>MOV_CAS_Profesional_requerido__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si es requerido el profesional</description>
        <label>Profesional requerido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Alta__c</fullName>
        <label>Fecha de creación del cliente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Apertura__c</fullName>
        <label>Fecha de Apertura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Cierre__c</fullName>
        <description>Fecha de Cierre del siniestro que se envía a la aseguradora.</description>
        <label>Fecha de Cierre</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Factura_Perito__c</fullName>
        <description>Fecha de la Factura emitida al Perito</description>
        <label>Fecha Factura Perito</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Factura__c</fullName>
        <description>Fecha de la factura informada por el Facturador</description>
        <label>Fecha de Factura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Generacion__c</fullName>
        <description>Fecha y hora real en la que se genera el movimiento. Al crear los movimientos de manera asíncrona, no nos sirve el campo CreatedDate, ya que sería igual en todos.</description>
        <label>Fecha Generación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Informe_Pericial__c</fullName>
        <label>Fecha de Informe Pericial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Ocurrencia__c</fullName>
        <label>Fecha de Ocurrencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOV_DAT_Fecha_Poliza__c</fullName>
        <description>Fecha de venta de la póliza</description>
        <label>Fecha de la Póliza</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Base_Imponible__c</fullName>
        <description>Base imponible informada por el Facturador</description>
        <label>Base Imponible</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Final__c</fullName>
        <description>Importe Final de la factura informado por el Facturador</description>
        <label>Importe Final</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Franquicia__c</fullName>
        <description>Campo reflejo del FAC_DIV_ImporteFactura para el envío de movimientos por ficheros a compañías</description>
        <label>Importe Franquicia</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Gastos__c</fullName>
        <description>Importe de gastos del perito</description>
        <label>Importe de Gastos</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Gestion__c</fullName>
        <label>Importe de Gestion</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Honorarios__c</fullName>
        <description>Importe de los honorarios del perito</description>
        <label>Importe Honorarios Perito</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_IVA_Gestion__c</fullName>
        <description>Importe del IVA de la gestión, informado por el Facturador</description>
        <label>Importe IVA Gestión</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_IVA__c</fullName>
        <description>Importe del IVA de la factura informado por el Facturador</description>
        <label>Importe IVA de la Factura</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Pago__c</fullName>
        <description>Importe del pago informado por el Facturador</description>
        <label>Importe Pago</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Importe_Reserva__c</fullName>
        <label>Importe Reserva</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Retencion_Pago__c</fullName>
        <description>Valor de la Retención del Pago informada por el Facturador</description>
        <label>Retención Pago</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_DIV_Valoracion_Siniestro__c</fullName>
        <label>Valoración Siniestro</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MOV_EMA_Email_Asegurado__c</fullName>
        <label>Email Asegurado</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Causante_Tipo_Via__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Causante: Tipo de Vía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Agencia_Pagadora__c</fullName>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_ALMUDENA , &apos;028101&apos;, null)</formula>
        <label>Agencia pagadora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Cliente__c</fullName>
        <description>Campo enviado Almudena. Siempre es &apos;CLIENTE&apos;</description>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_ALMUDENA , &apos;CLIENTE&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constante Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Cod_Municipio__c</fullName>
        <description>Código de Municipio enviado a NN. SIempre es &apos;00000&apos;</description>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_NATIONALE_NETHERLANDEN , &apos;00000&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de Municipio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Codigo_Registro__c</fullName>
        <description>Código de Registro enviado a aseguradoras Almudena y RGA. Siempre es 1.</description>
        <formula>IF(  OR(MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_ALMUDENA,MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_RGA) , &apos;1&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de Registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Codigo__c</fullName>
        <description>Código que se envía a Almudena en los movimientos de pagos. Siempre es 2.</description>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_ALMUDENA , &apos;2&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Especial__c</fullName>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_ALMUDENA , &apos;1&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Especial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Num_Doc_HS__c</fullName>
        <description>NIF de HomeServe. Este dato se envía en los ficheros de Pagos de IVA</description>
        <formula>&apos;A82451410&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº Documento HomeServe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Num_Registro__c</fullName>
        <description>Campo Número de Registro enviado a aseguradora RGA. Siempre es 001</description>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_RGA , &apos;001&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Num_Riesgo__c</fullName>
        <description>Campo Número de Riesgo enviado a aseguradora RGA. Siempre es 001</description>
        <formula>IF( MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_RGA , &apos;001&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Riesgo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Cons_Pago_Franquicia__c</fullName>
        <description>Campo Indicador si se pagó la franquicia enviado a aseguradora RGA o SegurCaixa. Siempre es N.</description>
        <formula>IF( OR(MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_RGA,MOV_LKP_Compania__r.CUE_TXT_Identificador__c = $Label.IDE_SEGURCAIXA), &apos;N&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicador si se pagó la Franquicia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Intervencion_Profesional__c</fullName>
        <description>Campo enviado a SC. Posición 20 del fichero de siniestros</description>
        <formula>&apos;N&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intervención Profesional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_FOR_Poliza_Suspension_Garantia__c</fullName>
        <description>Póliza en suspensión de garantías</description>
        <formula>&apos;N&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Póliza en Suspensión de Garantías</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_LKP_Bitacora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bitácora</label>
        <referenceTo>INT_Bitacora__c</referenceTo>
        <relationshipName>MOV_REL_Integraciones_Movimientos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOV_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integraciones: Movimiento CIA</relationshipLabel>
        <relationshipName>MOV_REL_Integraciones_Movimientos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOV_LKP_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MOV_REL_Integraciones_Movimientos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOV_LKP_Compania__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MOV_REL_Integraciones_Movimientos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOV_LKP_Orden_de_Trabajo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Integraciones: Movimiento CIA</relationshipLabel>
        <relationshipName>MOV_REL_Integraciones_Movimientos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOV_NUM_Porc_Retencion__c</fullName>
        <description>Porcentaje de Retención aplicado en la factura</description>
        <label>Porcentaje Retención</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOV_NUM_Porcentaje_IVA_Gestion__c</fullName>
        <description>Porcentaje de IVA de la gestión informado por el Facturador</description>
        <label>Porcentaje IVA Gestión</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOV_NUM_Porcentaje_IVA__c</fullName>
        <description>Porcentaje de IVA informado por el Facturador</description>
        <label>Porcentaje IVA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOV_SEL_Encuestador__c</fullName>
        <label>Identificador del proveedor externo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Servitelco</fullName>
                </value>
                <value>
                    <fullName>Stiga</fullName>
                </value>
                <value>
                    <fullName>HomeServe</fullName>
                </value>
                <value>
                    <fullName>No Asignado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOV_SEL_Estado_Movimiento__c</fullName>
        <label>Estado de Movimiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Bitacora</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOV_TFN_Causante_Telefono__c</fullName>
        <label>Causante: Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MOV_TFN_Perjudicado1_Telefono__c</fullName>
        <label>Perjudicado (1): Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MOV_TFN_Telefono_Asegurado__c</fullName>
        <label>Teléfono de Asegurado</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Accion__c</fullName>
        <description>Nombre de la acción desencadenadora del movimiento</description>
        <label>Acción</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Agrupacion_Procedencia__c</fullName>
        <label>Agrupación de la procedencia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Ano_Pago__c</fullName>
        <description>Año en el que se realiza el pago informado por el Facturador</description>
        <label>Año Pago</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Cambio_Version_Declaracion__c</fullName>
        <description>Campo de envío fichero a SC Siniestros</description>
        <label>Cambio Versión Declaración</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causa_Modificacion__c</fullName>
        <label>Causa de Modificación</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causa_Rechazo__c</fullName>
        <label>Causa de Rechazo</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causa_Siniestro__c</fullName>
        <label>Causa de Siniestro</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Apellido1__c</fullName>
        <label>Causante: Apellido 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Apellido2__c</fullName>
        <label>Causante: Apellido 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Compania__c</fullName>
        <label>Causante: Compañía</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Direccion__c</fullName>
        <label>Causante: Dirección</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Nombre__c</fullName>
        <label>Causante: Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Num_Documento__c</fullName>
        <label>Causante: Nº de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Num_Poliza__c</fullName>
        <label>Causante: Nº de Póliza</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Poblacion__c</fullName>
        <label>Causante: Población</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Provincia__c</fullName>
        <label>Causante: Provincia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Responsable__c</fullName>
        <label>Causante: Responsable</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Causante_Tipo_Documento__c</fullName>
        <label>Causante: Tipo de Documento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Apertura__c</fullName>
        <label>Código de Apertura (garantía)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Capital__c</fullName>
        <description>Campo para envío a compañías en ficheros de facturación. Reflejo de objeto factura</description>
        <label>Código Capital</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Cierre__c</fullName>
        <label>Código de Cierre</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Cliente_CIA__c</fullName>
        <label>Código de Cliente CIA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Corrosion__c</fullName>
        <description>Campo de envío a SC Siniestros</description>
        <label>Código de Corrosión</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Error__c</fullName>
        <description>Código de error recibido de la carga de pólizas</description>
        <label>Código de Error</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Gestor_Poliza__c</fullName>
        <label>Código Gestor (Póliza)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Modificacion_Desc__c</fullName>
        <label>Código de Modificación (Descripción)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Modificacion__c</fullName>
        <label>Código de Modificación</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Pago__c</fullName>
        <description>Campo de Código de Pago enviado aseguradoras</description>
        <label>Código de Pago</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Perito__c</fullName>
        <label>Código de Perito</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Procedencia__c</fullName>
        <label>Código de la procedencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Producto__c</fullName>
        <label>Código de Producto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Ramo__c</fullName>
        <label>Código de Ramo</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Reapertura__c</fullName>
        <label>Código de Reapertura</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Rechazo__c</fullName>
        <label>Código de Rechazo</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Codigo_Recurso__c</fullName>
        <description>Código del profesional enviado a aseguradora en ficheros de movimiento</description>
        <label>Código de Profesional</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Comentarios_Rechazo__c</fullName>
        <description>Comentarios de Rechazo de Siniestro</description>
        <label>Comentarios Rechazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Comentarios_Sin_Indem__c</fullName>
        <description>Comentarios de Siniestros Indemnizables</description>
        <label>Comentarios Siniestro Indemnizable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Comentarios_Sin_Rep__c</fullName>
        <description>Comentarios de Siniestros Reparables</description>
        <label>Comentarios Siniestro Reparable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Contador_Gremios__c</fullName>
        <label>Contador de Gremio</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Contador_Telefonos__c</fullName>
        <label>Contador de Teléfonos</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Desc_Error__c</fullName>
        <description>Descripción del error recibido de la carga de pólizas</description>
        <label>Descripcion del Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Descripcion_Causante__c</fullName>
        <description>Descripción del Causante</description>
        <label>Descripción del Causante</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Descripcion_Perjudicado__c</fullName>
        <description>Campo de envío de ficheros para SC</description>
        <label>Descripción Perjudicado</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Error_Gar__c</fullName>
        <label>Error Garantias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Error_Pol__c</fullName>
        <label>Error Polizas</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Error__c</fullName>
        <label>Error</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Estado_Siniestro__c</fullName>
        <description>Estado del siniestro asociado a los movimientos que se envían a la aseguradora</description>
        <label>Estado del Siniestro</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Fecha_Envio__c</fullName>
        <label>Fecha del envío</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Gremio_Desc__c</fullName>
        <label>Gremio (Descripción)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Gremio__c</fullName>
        <label>Gremio</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Grupo_Causa_Desc__c</fullName>
        <label>Descripción del grupo de causa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Grupo_Causa__c</fullName>
        <label>Grupo de Causa</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Id_Procedencia__c</fullName>
        <description>Identificador de la procedencia recibida de la carga de pólizas</description>
        <label>Identificador de Procedencia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Identificador_Cliente__c</fullName>
        <label>Identificador del Cliente</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Idioma__c</fullName>
        <label>Idioma</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Indicador_Franquicia__c</fullName>
        <description>Campo reflejo de FAC_CAS_IndicadorPagoFranquicia__c para el envío de movimientos por ficheros a compañías</description>
        <label>Indicador Franquicia</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Indicador_Quincena__c</fullName>
        <description>Campo reflejo de FAC_NUM_IndicadorQuincena__c para el envío de movimientos por fichero a compañías</description>
        <label>Indicador Quincena</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Listado_Garantias__c</fullName>
        <label>Listado de Garantías</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Mes_Pago__c</fullName>
        <description>Mes en el que se realiza el pago informado por el Facturador</description>
        <label>Mes Pago</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Modalidad__c</fullName>
        <description>Modalidad</description>
        <label>Modalidad</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Motivo_No_Reparacion__c</fullName>
        <description>Campo de envío a SC Siniestros</description>
        <label>Motivo de No Reparación</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Motivo_Perito_Obs__c</fullName>
        <label>Motivo Peticion Perito Observaciones</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Motivo_Perito__c</fullName>
        <label>Motivo Petición Perito</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Nombre_Procedencia__c</fullName>
        <label>Nombre de la procedencia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Caso_CIA__c</fullName>
        <label>Nº de Intervención CIA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Caso_HS__c</fullName>
        <label>Nº de Intervención HS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Certificado_Poliza__c</fullName>
        <label>Nº de certificado (Póliza)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Doc_Profesional__c</fullName>
        <description>Número de documento de identificación del profesional</description>
        <label>Nº Documento Profesional</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Documento_Cliente__c</fullName>
        <description>Número de Documento de Identidad del cliente</description>
        <label>Nº Documento Cliente</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Envio__c</fullName>
        <label>Número de envío</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Garantias_Enviadas__c</fullName>
        <label>Nº de Garantías Enviadas</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_OrdenTrabajo_HS__c</fullName>
        <label>Nº de Servicio HS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Poliza_Comp__c</fullName>
        <description>Número de la póliza complementaria</description>
        <label>Nº Póliza Complementaria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Poliza__c</fullName>
        <label>Nº de Póliza</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Dev_Gar__c</fullName>
        <label>Numero de Registros Garantias Devueltas</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Dev_Pol__c</fullName>
        <label>Numero de Registros Polizas Devueltos</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Dev__c</fullName>
        <label>Número de Registros Devueltos</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Gar__c</fullName>
        <label>Numero de Registros Garantias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Pol__c</fullName>
        <label>Numero de Registro Polizas</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Proc_Gar__c</fullName>
        <label>Numero de Registros Garantias Procesados</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Proc_Pol__c</fullName>
        <label>Numero de Registros Polizas Procesados</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg_Proc__c</fullName>
        <label>Número de Registros Procesados</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Num_Reg__c</fullName>
        <label>Número de Registros</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Numero_Documento__c</fullName>
        <label>DNI Cliente</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Numero_Pago__c</fullName>
        <description>Número del pago realizado que se envía a la aseguradora vía fichero</description>
        <label>Número de Pago</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Numero_factura__c</fullName>
        <description>Número de factura informado por el Facturador</description>
        <label>Nº de Factura</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Obs_Corrosion__c</fullName>
        <description>Campo de envío a SC Siniestros</description>
        <label>Observaciones Corrosión</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perceptor__c</fullName>
        <description>Persona que recibe el pago y que se envía a la aseguradora vía fichero</description>
        <label>Perceptor</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Apellido1__c</fullName>
        <label>Perjudicado (1): Apellido 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Apellido2__c</fullName>
        <label>Perjudicado (1): Apellido 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Codigo_Postal__c</fullName>
        <label>Perjudicado (1): Código Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Direccion__c</fullName>
        <label>Perjudicado (1): Dirección</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Nombre__c</fullName>
        <label>Perjudicado (1): Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Num_Documento__c</fullName>
        <label>Perjudicado (1): Nº de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Pais__c</fullName>
        <label>Perjudicado (1): País</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>